syntax = "proto3";


package anywhereRpc;

service AnywhereServer {
    rpc ListAgent(Empty)returns(Agents){}
    rpc AddProxyConfig(AddProxyConfigInput)returns(Empty){}
    rpc ListProxyConfigs(Empty)returns(ListProxyConfigsOutput){}
    rpc RemoveProxyConfig(RemoveProxyConfigInput)returns(Empty){}
    rpc LoadProxyConfigFile(Empty)returns(Empty){}
    rpc SaveProxyConfigToFile(Empty)returns(Empty){}
    rpc ListConns(ListConnsInput)returns(Conns){}
    rpc KillConnById(KillConnByIdInput)returns(Empty){}
    rpc KillAllConns(Empty)returns(Empty){}
    rpc UpdateProxyConfigWhiteList(UpdateProxyConfigWhiteListInput)returns(Empty){}
    rpc GetSummary(Empty)returns(GetSummaryOutput){}
    rpc SendReport(Empty)returns(Empty){}
}

message Empty{}

message Agent{
    string userName = 1;
    string groupName = 2;
    string id = 3;
    string remoteAddr = 4;
    string lastAckRcv = 5;
    string lastAckSend = 6;
    int64 proxyConfigCount = 7;

}

message Agents{
    repeated Agent agent = 1;
}

message ProxyConfig{
    string username = 1;
    string groupName = 2;
    int64 remotePort = 3;
    string localAddr = 4;
    bool isWhiteListOn = 5;
    string WhiteCidrList = 6;
    int64 NetworkFlowRemoteToLocalInBytes = 7;
    int64 NetworkFlowLocalToRemoteInBytes = 8;
    int64 ProxyConnectCount = 9;
    int64 ProxyConnectRejectCount = 10;

}

message AddProxyConfigInput{
    ProxyConfig Config = 1;
}


message ListProxyConfigsOutput{
    repeated ProxyConfig Config = 1;
}

message RemoveProxyConfigInput{
    string userName = 1;
    string groupName = 2;
    string localAddr = 3;
    int64 remotePort = 4;
}

message ListConnsInput{
    string userName = 1;
    string groupName = 2;
}

message Conn {
    string agentId = 1;
    int64 connId = 2;
    string srcRemoteAddr = 3;
    string srcLocalAddr = 4;
    string dstRemoteAddr = 5;
    string dstLocalAddr = 6;
    string userName = 7;

}

message Conns{
    repeated Conn conn = 1;
}

message KillConnByIdInput {
    string userName = 1;
    string groupName = 2;
    int64 connId = 3;
}

message UpdateProxyConfigWhiteListInput {
    string userName = 1;
    string groupName = 2;
    string localAddr = 3;
    string whiteCidrs = 4;
    bool whiteListEnable = 5;
    int64 remotePort = 6;

}
message GetSummaryOutput {
    int64 agentCount = 1;
    int64 proxyCount = 2;
    int64 currentProxyConnectionCount = 3;
    int64 proxyConnectCount = 4;
    int64 proxyNetFlowInBytes = 5;
    repeated ProxyConfig configNetFlowTop10  = 6;
    repeated ProxyConfig configConnectFailTop10  = 7;
    int64 adminWebUiAuthFailCount =8;
    int64 groupCount =9;
}
